--- a/detect.html
+++ b/detect.html
@@ -1,1 +1,27 @@
-由于碰撞到了审计规则，您的连接已经被阻断。 
+<!DOCTYPE html>
+<html>
+<head>
+<title>请注意</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta name="keywords" content="" />
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900" rel="stylesheet">
+</head>
+<body>
+<div class="error_main">
+	<div class="content">
+		<h1>请停止访问被禁止的内容</h1>
+			<div class="error_content">
+				<span class="fa fa-frown-o"></span>
+				<h2>请不要使用本服务用于非法或被禁用的访问行为</h2>
+				<p>请查看用户中心的公告，我们已经封锁针对政治/BT下载/360服务/定位等用户行为，请您也遵守国家法律进行网络浏览。</p>
+				<a class="b-home" href="https://" target="_blank" href="#">访问我们的网站</a>
+			</div>
+	</div>
+	
+</div>
+
+</body>
+</html>
